<package format="2">
  <name>raycaster_layer</name>
  <version>0.5.0</version>
  <description>
    make costmap layer from a  map and a point of view 
   </description>

  <maintainer email="zhaoxinwei74@gmail.com">Zhaoxinwei</maintainer>
  <author>Zhaoxinwei!!</author>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>angles</depend>
  <depend>costmap_2d</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <test_depend>roslint</test_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>
